[package]
name = "chroma_vm"
description = "A VM to run any jpeg image as a program"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "lib"
crate-type = ["cdylib", "lib"]
path = "src/lib.rs"

[[bin]]
name = "main"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.68"
clap = { version = "4.0.32", features = ["derive"] }
image = "0.24.5"
thiserror = "1.0.38"
wasm-bindgen = "0.2.83"
wee_alloc = "0.4.5"

[profile.release]
lto = true
opt-level = "s"
strip = true

[profile.release.build-override]
opt-level = "s"
debug-assertions = false
overflow-checks = false
strip = true
